--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -43,7 +43,14 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Sta-Shi&#39;s Blog"></a>
+            <a href="/" title="Sta-Shi&#39;s Blog"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="/images/menu.jpg"
+        data-srcset="/images/menu.jpg, /images/menu.jpg 1.5x, /images/menu.jpg 2x"
+        data-sizes="auto"
+        alt="/images/menu.jpg"
+        title="/images/menu.jpg" />STA-SHI</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/" title="All Posts"> Posts </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -67,7 +74,14 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Sta-Shi&#39;s Blog"></a>
+                <a href="/" title="Sta-Shi&#39;s Blog"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="/images/menu.jpg"
+        data-srcset="/images/menu.jpg, /images/menu.jpg 1.5x, /images/menu.jpg 2x"
+        data-sizes="auto"
+        alt="/images/menu.jpg"
+        title="/images/menu.jpg" />STA-SHI</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -136,7 +150,7 @@
                             <a class="link-to-markdown" href="/hello-world/index.md" target="_blank">Read Markdown</a>
                         </span></div>
             <div class="post-info-share">
-                <span><a href="javascript:void(0);" title="Share on Twitter" data-sharer="twitter" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-hashtags="Blog"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="Share on Facebook" data-sharer="facebook" data-url="https://sta-shi.github.io/hello-world/" data-hashtag="Blog"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="Share on WhatsApp" data-sharer="whatsapp" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-web><i class="fab fa-whatsapp fa-fw"></i></a><a href="javascript:void(0);" title="Share on Line" data-sharer="line" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World"><i data-svg-src="/lib/simple-icons/icons/line.min.svg"></i></a><a href="javascript:void(0);" title="Share on 微博" data-sharer="weibo" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-image="images/cow.jpg"><i class="fab fa-weibo fa-fw"></i></a><a href="javascript:void(0);" title="Share on Myspace" data-sharer="myspace" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-description=""><i data-svg-src="/lib/simple-icons/icons/myspace.min.svg"></i></a><a href="javascript:void(0);" title="Share on Blogger" data-sharer="blogger" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-description=""><i class="fab fa-blogger fa-fw"></i></a><a href="javascript:void(0);" title="Share on Evernote" data-sharer="evernote" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World"><i class="fab fa-evernote fa-fw"></i></a></span>
+                <span><a href="javascript:void(0);" title="Share on Twitter" data-sharer="twitter" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-hashtags="Blog"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="Share on Facebook" data-sharer="facebook" data-url="https://sta-shi.github.io/hello-world/" data-hashtag="Blog"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="Share on 微博" data-sharer="weibo" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World" data-image="images/cow.jpg"><i class="fab fa-weibo fa-fw"></i></a><a href="javascript:void(0);" title="Share on Evernote" data-sharer="evernote" data-url="https://sta-shi.github.io/hello-world/" data-title="Hello World"><i class="fab fa-evernote fa-fw"></i></a></span>
             </div>
         </div>
     </div>
