--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Sta-Shi&#39;s Blog"></a>
+            <a href="/" title="Sta-Shi&#39;s Blog"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="/images/menu.jpg"
+        data-srcset="/images/menu.jpg, /images/menu.jpg 1.5x, /images/menu.jpg 2x"
+        data-sizes="auto"
+        alt="/images/menu.jpg"
+        title="/images/menu.jpg" />STA-SHI</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/" title="All Posts"> Posts </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -59,7 +66,14 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Sta-Shi&#39;s Blog"></a>
+                <a href="/" title="Sta-Shi&#39;s Blog"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="/images/menu.jpg"
+        data-srcset="/images/menu.jpg, /images/menu.jpg 1.5x, /images/menu.jpg 2x"
+        data-sizes="auto"
+        alt="/images/menu.jpg"
+        title="/images/menu.jpg" />STA-SHI</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -100,7 +114,7 @@
         data-srcset="/images/logo.png, /images/logo.png 1.5x, /images/logo.png 2x"
         data-sizes="auto"
         alt="/images/logo.png"
-        title="/images/logo.png" /></a></div><h1 class="home-title">STA-SHI'S BLOG</h1><h2 class="home-subtitle"><div id="id-1" class="typeit"></div></h2><div class="links"><a href="https://steamcommunity.com/id/skywalkerllap" title="Steam" target="_blank" rel="noopener noreffer me"><i class="fab fa-steam fa-fw"></i></a><a href="https://www.douban.com/people/167163810" title="豆瓣" target="_blank" rel="noopener noreffer me"><i data-svg-src="/lib/simple-icons/icons/douban.min.svg"></i></a><a href="https://space.bilibili.com/107692297" title="bilibili" target="_blank" rel="noopener noreffer me"><i data-svg-src="/svg/icons/bilibili.min.svg"></i></a><a href="mailto:564847411@qq.com" title="Email" rel=" me"><i class="far fa-envelope fa-fw"></i></a></div></div>
+        title="/images/logo.png" /></a></div><h1 class="home-title">STA-SHI'S HOLLOW</h1><h2 class="home-subtitle"><div id="id-1" class="typeit"></div></h2><div class="links"><a href="https://steamcommunity.com/id/skywalkerllap" title="Steam" target="_blank" rel="noopener noreffer me"><i class="fab fa-steam fa-fw"></i></a><a href="https://www.douban.com/people/167163810" title="豆瓣" target="_blank" rel="noopener noreffer me"><i data-svg-src="/lib/simple-icons/icons/douban.min.svg"></i></a><a href="https://space.bilibili.com/107692297" title="bilibili" target="_blank" rel="noopener noreffer me"><i data-svg-src="/svg/icons/bilibili.min.svg"></i></a><a href="mailto:564847411@qq.com" title="Email" rel=" me"><i class="far fa-envelope fa-fw"></i></a></div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><div class="featured-image-preview">
             <a href="/hello-world/"><img
         class="lazyload"
