--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>Sta-Shi&#39;s Blog</title><meta name="Description" content="This is Sta-Shi&#39;s Blog"><meta property="og:title" content="Sta-Shi&#39;s Blog" />
-<meta property="og:description" content="This is Sta-Shi&#39;s Blog" />
+        <title>Stashi&#39;s Blog</title><meta name="Description" content="This is Stashi&#39;s Blog"><meta property="og:title" content="Stashi&#39;s Blog" />
+<meta property="og:description" content="This is Stashi&#39;s Blog" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://sta-shi.github.io/" /><meta property="og:image" content="https://sta-shi.github.io/logo.png"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://sta-shi.github.io/logo.png"/>
 
-<meta name="twitter:title" content="Sta-Shi&#39;s Blog"/>
-<meta name="twitter:description" content="This is Sta-Shi&#39;s Blog"/>
-<meta name="application-name" content="LoveIt">
-<meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+<meta name="twitter:title" content="Stashi&#39;s Blog"/>
+<meta name="twitter:description" content="This is Stashi&#39;s Blog"/>
+<meta name="application-name" content="Stashi&#39;s Hollow">
+<meta name="apple-mobile-web-app-title" content="Stashi&#39;s Hollow"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://sta-shi.github.io/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Sta-Shi&#39;s Blog">
-    <link rel="feed" href="/index.xml" type="application/rss+xml" title="Sta-Shi&#39;s Blog"><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://sta-shi.github.io/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Stashi&#39;s Blog">
+    <link rel="feed" href="/index.xml" type="application/rss+xml" title="Stashi&#39;s Blog"><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
         "url": "https:\/\/sta-shi.github.io\/","inLanguage": "en-us","author": {
                 "@type": "Person",
                 "name": "stashi"
-            },"description": "This is Sta-Shi's Blog","name": "Sta-Shi's Blog"
+            },"description": "This is Stashi's Blog","name": "Stashi's Blog"
     }
     </script></head>
     <body header-desktop="fixed" header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
@@ -35,14 +35,14 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="Sta-Shi&#39;s Blog"><img
+            <a href="/" title="Stashi&#39;s Blog"><img
         class="lazyload logo"
         src="/svg/loading.min.svg"
         data-src="/images/menu.jpg"
         data-srcset="/images/menu.jpg, /images/menu.jpg 1.5x, /images/menu.jpg 2x"
         data-sizes="auto"
         alt="/images/menu.jpg"
-        title="/images/menu.jpg" />STA-SHI</a>
+        title="/images/menu.jpg" />STASHI</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/" title="All Posts"> Posts </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -66,14 +66,14 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="Sta-Shi&#39;s Blog"><img
+                <a href="/" title="Stashi&#39;s Blog"><img
         class="lazyload logo"
         src="/svg/loading.min.svg"
         data-src="/images/menu.jpg"
         data-srcset="/images/menu.jpg, /images/menu.jpg 1.5x, /images/menu.jpg 2x"
         data-sizes="auto"
         alt="/images/menu.jpg"
-        title="/images/menu.jpg" />STA-SHI</a>
+        title="/images/menu.jpg" />STASHI</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -114,7 +114,7 @@
         data-srcset="/images/logo.png, /images/logo.png 1.5x, /images/logo.png 2x"
         data-sizes="auto"
         alt="/images/logo.png"
-        title="/images/logo.png" /></a></div><h1 class="home-title">STA-SHI'S HOLLOW</h1><h2 class="home-subtitle"><div id="id-1" class="typeit"></div></h2><div class="links"><a href="https://steamcommunity.com/id/skywalkerllap" title="Steam" target="_blank" rel="noopener noreffer me"><i class="fab fa-steam fa-fw"></i></a><a href="https://www.douban.com/people/167163810" title="豆瓣" target="_blank" rel="noopener noreffer me"><i data-svg-src="/lib/simple-icons/icons/douban.min.svg"></i></a><a href="https://space.bilibili.com/107692297" title="bilibili" target="_blank" rel="noopener noreffer me"><i data-svg-src="/svg/icons/bilibili.min.svg"></i></a><a href="mailto:564847411@qq.com" title="Email" rel=" me"><i class="far fa-envelope fa-fw"></i></a></div></div>
+        title="/images/logo.png" /></a></div><h1 class="home-title">STASHI'S HOLLOW</h1><h2 class="home-subtitle"><div id="id-1" class="typeit"></div></h2><div class="links"><a href="https://steamcommunity.com/id/skywalkerllap" title="Steam" target="_blank" rel="noopener noreffer me"><i class="fab fa-steam fa-fw"></i></a><a href="https://www.douban.com/people/167163810" title="豆瓣" target="_blank" rel="noopener noreffer me"><i data-svg-src="/lib/simple-icons/icons/douban.min.svg"></i></a><a href="https://space.bilibili.com/107692297" title="bilibili" target="_blank" rel="noopener noreffer me"><i data-svg-src="/svg/icons/bilibili.min.svg"></i></a><a href="mailto:564847411@qq.com" title="Email" rel=" me"><i class="far fa-envelope fa-fw"></i></a></div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><div class="featured-image-preview">
             <a href="/hello-world/"><img
         class="lazyload"
