--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
         <title>Stashi&#39;s Blog</title><meta name="Description" content="This is Stashi&#39;s Blog"><meta property="og:title" content="Stashi&#39;s Blog" />
 <meta property="og:description" content="This is Stashi&#39;s Blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://sta-shi.github.io/" /><meta property="og:image" content="https://sta-shi.github.io/avatar.jpg"/>
+<meta property="og:url" content="http://stashi.top/" /><meta property="og:image" content="http://stashi.top/avatar.jpg"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://sta-shi.github.io/avatar.jpg"/>
+<meta name="twitter:image" content="http://stashi.top/avatar.jpg"/>
 
 <meta name="twitter:title" content="Stashi&#39;s Blog"/>
 <meta name="twitter:description" content="This is Stashi&#39;s Blog"/>
 <meta name="application-name" content="Stashi&#39;s Hollow">
 <meta name="apple-mobile-web-app-title" content="Stashi&#39;s Hollow"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://sta-shi.github.io/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Stashi&#39;s Blog">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://stashi.top/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Stashi&#39;s Blog">
     <link rel="feed" href="/index.xml" type="application/rss+xml" title="Stashi&#39;s Blog"><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https:\/\/sta-shi.github.io\/","inLanguage": "en-us","author": {
+        "url": "http:\/\/stashi.top\/","inLanguage": "en-us","author": {
                 "@type": "Person",
                 "name": "stashi"
             },"description": "This is Stashi's Blog","name": "Stashi's Blog"
