--- a/hello_world/index.html
+++ b/hello_world/index.html
@@ -125,11 +125,11 @@
         </div><div class="featured-image"><img
         class="lazyload"
         src="/svg/loading.min.svg"
-        data-src="images/Hello_World.jpg"
-        data-srcset="/images/Hello_World.jpg, images/Hello_World.jpg 1.5x, /images/Hello_World.jpg 2x"
+        data-src="images/Hello_World/Cover.jpg"
+        data-srcset="/images/Hello_World/Cover.jpg, images/Hello_World/Cover.jpg 1.5x, /images/Hello_World/Cover.jpg 2x"
         data-sizes="auto"
-        alt="/images/Hello_World.jpg"
-        title="/images/Hello_World.jpg" /></div><div class="details toc" id="toc-static"  kept="true">
+        alt="/images/Hello_World/Cover.jpg"
+        title="/images/Hello_World/Cover.jpg" /></div><div class="details toc" id="toc-static"  kept="true">
                 <div class="details-summary toc-title">
                     <span>Contents</span>
                     <span><i class="details-icon fas fa-angle-right"></i></span>
@@ -148,7 +148,7 @@
         <div class="post-info-line">
             <div class="post-info-md"></div>
             <div class="post-info-share">
-                <span><a href="javascript:void(0);" title="Share on Twitter" data-sharer="twitter" data-url="http://stashi.top/hello_world/" data-title="Hello World" data-hashtags="Blog"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="Share on Facebook" data-sharer="facebook" data-url="http://stashi.top/hello_world/" data-hashtag="Blog"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="Share on 微博" data-sharer="weibo" data-url="http://stashi.top/hello_world/" data-title="Hello World" data-image="images/Hello_World.jpg"><i class="fab fa-weibo fa-fw"></i></a><a href="javascript:void(0);" title="Share on Evernote" data-sharer="evernote" data-url="http://stashi.top/hello_world/" data-title="Hello World"><i class="fab fa-evernote fa-fw"></i></a></span>
+                <span><a href="javascript:void(0);" title="Share on Twitter" data-sharer="twitter" data-url="http://stashi.top/hello_world/" data-title="Hello World" data-hashtags="Blog"><i class="fab fa-twitter fa-fw"></i></a><a href="javascript:void(0);" title="Share on Facebook" data-sharer="facebook" data-url="http://stashi.top/hello_world/" data-hashtag="Blog"><i class="fab fa-facebook-square fa-fw"></i></a><a href="javascript:void(0);" title="Share on 微博" data-sharer="weibo" data-url="http://stashi.top/hello_world/" data-title="Hello World" data-image="images/Hello_World/Cover.jpg"><i class="fab fa-weibo fa-fw"></i></a><a href="javascript:void(0);" title="Share on Evernote" data-sharer="evernote" data-url="http://stashi.top/hello_world/" data-title="Hello World"><i class="fab fa-evernote fa-fw"></i></a></span>
             </div>
         </div>
     </div>
@@ -165,7 +165,7 @@
 </div>
 </article></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">On the Boulevard of Broken Dreams</div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">stashi</a></span></div>
+        <div class="footer-container"><div class="footer-line">On the Boulevard of Broken Dreams</div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022 - 2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">stashi</a></span></div>
         </div>
     </footer></div>
 
