--- a/404.html
+++ b/404.html
@@ -109,7 +109,7 @@
         })();
     </script></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">On the Boulevard of Broken Dreams</div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">stashi</a></span></div>
+        <div class="footer-container"><div class="footer-line">On the Boulevard of Broken Dreams</div><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2022 - 2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">stashi</a></span></div>
         </div>
     </footer></div>
 
